# Collect_Security_info

./: .gitignore  README.md  config.example.yaml  pyproject.toml  requirements.txt  tag_dictionary.yaml
prompts/: system_prompt.txt
scripts/: list_jira_fields.py  run_daily.py
src/cti_collector/: __init__.py  config.py  ioc.py  jira.py  llm.py  logging_utils.py  models.py  pipeline.py  rss.py  sigma_validate.py  storage.py  url_utils.py
tests/: conftest.py  test_ioc.py  test_models.py  test_pipeline.py  test_sigma_validate.py  test_storage.py  test_url_utils.py
